--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "board",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "start:prod": "cross-env NODEENV=production nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.4.5",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "mysql2": "^3.9.1",
-    "sequelize": "^6.37.1",
-    "sequelize-cli": "^6.6.2"
-  }
+    "name": "board",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app.js",
+    "scripts": {
+        "start:dev": "cross-env NODE_ENV=development nodemon app.js",
+        "start:prod": "cross-env NODEENV=production nodemon app.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "bcrypt": "^5.1.1",
+        "cross-env": "^7.0.3",
+        "dotenv": "^16.4.5",
+        "ejs": "^3.1.9",
+        "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.2",
+        "mysql2": "^3.9.1",
+        "sequelize": "^6.37.1",
+        "sequelize-cli": "^6.6.2"
+    }
 }
